# python-port-scanner

./: .gitignore  LICENSE  MANIFEST.in  README.md  TESTING.md  port_scanner.py  pyproject.toml  pytest.ini  router-scan.csv  router-scan.json  router-scan.txt  targets.example.txt
.github/workflows/: tests.yml
src/: port_scanner.py
src/portscanner/: __init__.py  __main__.py  cli.py  connect_scan.py  net.py  reports.py  scan_result.py  service_id.py  synscan.py
tests/: test_banners_http.py  test_cli.py  test_connect_scan.py  test_interruptions.py  test_ipv6.py  test_multi_target.py  test_output_and_main.py  test_packaging.py  test_port_parsing.py  test_profiles.py  test_reports.py  test_results.py  test_service_identification.py  test_syn_classification.py  test_tls.py
