[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "python-port-scanner"
dynamic = ["version"]
description = "Authorized IPv4/IPv6 TCP connect and SYN scanner with service identification and structured reports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "scapy>=2.5.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: System :: Networking",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "build>=1.2",
]

[project.scripts]
portscan = "portscanner.cli:console_main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["port_scanner"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["portscanner*"]

[tool.coverage.run]
source = ["portscanner"]
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.setuptools.dynamic]
version = {attr = "portscanner.__version__"}
